<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2002-2020, the original author or authors.

    This software is distributable under the BSD license. See the terms of the
    BSD license in the documentation provided with this software.

    https://opensource.org/licenses/BSD-3-Clause

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jline</groupId>
        <artifactId>jline-parent</artifactId>
        <version>3.21.1-SNAPSHOT</version>
    </parent>

    <artifactId>jline-terminal</artifactId>
    <name>JLine Terminal</name>

    <properties>
        <automatic.module.name>org.jline.terminal</automatic.module.name>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <configuration>
                            <excludes>
                                <exclude>**/jep424/*.java</exclude>
                            </excludes>
                            <compilerArgs>
                                <arg>-Xlint:all,-options</arg>
                                <arg>-Werror</arg>
                            </compilerArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jdk19</id>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>**/jep424/*.java</include>
                            </includes>
                            <release>19</release>
                            <compilerArgs>
                                <arg>-Xlint:all,-options</arg>
                                <arg>--enable-preview</arg>
                            </compilerArgs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <configuration>
                    <instructions>
                        <Export-Package>*;-noimport:=true</Export-Package>
                        <Import-Package>
                            sun.misc;resolution:=optional,
                            *
                        </Import-Package>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
